# expense-tracker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  Dockerfile.backend  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: tracker.py
backend/app/module/postgredb/: __init__.py  main.py  queries.py
backend/app/module/tracker/: __init__.py  main.py  repo.py
mcp/: Dockerfile  pyproject.toml  server.py
n8n_data/: config  database.sqlite
notebook/: no123.ipynb  no4.ipynb
